--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <header class="top-menu">
         <div class="logo">
-            <img src="/images/govbr.png" alt="Logo">
+            <img src="images/govbr.png" alt="Logo">
         </div>
         <nav>
             <ul>
