--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         </div>
   
         <div class="form-actions">
-          <button type="button" class="cancel-btn">Cancelar</button>
+          <button type="button" class="cancel-btn">Limpar</button>
           <button type="submit" class="submit-btn">Entrar</button>
         </div>
       </form>
