--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
           <div class="top-icons" >
             <img class="svg_icons" src="images/InformationCircle.svg" alt="Login" class="icone">
             <li><a href="#">Alto Contraste</a></li>
+            <img class="svg_icons" src="images/acessibility.svg" alt="Login" class="icone">
             <li><a href="#">Libras</a></li>
         </div>
         </ul>
@@ -40,7 +41,7 @@
         </div>
   
         <div class="form-actions">
-          <button type="button" class="cancel-btn">Limpar</button>
+          <button type="reset" class="cancel-btn">Limpar</button>
           <button type="submit" class="submit-btn">Entrar</button>
         </div>
       </form>
@@ -63,3 +64,7 @@
   </div>
   </body>
 </html>
+
+
+  
+
