--- a/index.html
+++ b/index.html
@@ -49,10 +49,10 @@
       <div class="other-options">
         <h4>Outras opções de identificação:</h4>
         <ul>
-          <li class="other-icons"><img class="svg_icons" src="images/DevicePhoneMobile.svg" alt="Login" class="icone"><a href="#">Login com seu banco</a></li>
-          <li class="other-icons"><img class="svg_icons" src="images/QrCode.svg" alt="Login" class="icone"><a href="#">Login com QR code</a></li>
-          <li class="other-icons"><img class="svg_icons" src="images/Window.svg" alt="Login" class="icone"><a href="#">Seu certificado digital</a></li>
-          <li class="other-icons"><img class="svg_icons" src="images/Cloud.svg" alt="Login" class="icone"><a href="#">Seu certificado digital em nuvem</a></li>
+          <li class="other-icons"><img class="svg_icons" src="images/DevicePhoneMobile.svg" alt="Login" class="icone"><a href="#" class="bank">Login com seu banco</a><p class="silver">sua conta será prata</p></li>
+          <li class="other-icons"><img class="svg_icons" src="images/QrCode.svg" alt="Login" class="icone"><a href="#" class="secondary">Login com QR code</a></li>
+          <li class="other-icons"><img class="svg_icons" src="images/Window.svg" alt="Login" class="icone"><a href="#" class="secondary">Seu certificado digital</a></li>
+          <li class="other-icons"><img class="svg_icons" src="images/Cloud.svg" alt="Login" class="icone"><a href="#" class="secondary">Seu certificado digital em nuvem</a></li>
         </ul>
       </div>
     </div>
