--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>Login Gov.br</title>
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <link href="https://fonts.googleapis.com/css2?family=Rawline:wght@400;700&display=swap" rel="stylesheet">
+
 
   </head>
   <body>
@@ -48,6 +50,7 @@
   
       <div class="other-options">
         <h4>Outras opções de identificação:</h4>
+        <hr>
         <ul>
           <li class="other-icons"><img class="svg_icons" src="images/DevicePhoneMobile.svg" alt="Login" class="icone"><a href="#" class="bank">Login com seu banco</a><p class="silver">sua conta será prata</p></li>
           <li class="other-icons"><img class="svg_icons" src="images/QrCode.svg" alt="Login" class="icone"><a href="#" class="secondary">Login com QR code</a></li>
@@ -64,7 +67,3 @@
   </div>
   </body>
 </html>
-
-
-  
-
