--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
   
         <div class="forgot-password">
           <a href="#">Esqueci minha senha</a>
+          <hr class="forget">
         </div>
   
         <div class="form-actions">
@@ -50,7 +51,7 @@
   
       <div class="other-options">
         <h4>Outras opções de identificação:</h4>
-        <hr>
+        <hr class="identify">
         <ul>
           <li class="other-icons"><img class="svg_icons" src="images/DevicePhoneMobile.svg" alt="Login" class="icone"><a href="#" class="bank">Login com seu banco</a><p class="silver">sua conta será prata</p></li>
           <li class="other-icons"><img class="svg_icons" src="images/QrCode.svg" alt="Login" class="icone"><a href="#" class="secondary">Login com QR code</a></li>
